# OnCallPilot

./: .gitignore
apps/api/: Dockerfile  pyproject.toml
apps/api/oncallpilot_api/: config.py  dependencies.py  main.py
apps/api/oncallpilot_api/api/: routes_alerts.py  routes_chat.py  routes_datasources.py  routes_events.py  routes_health.py  routes_incidents.py  routes_investigations.py  schemas.py
apps/api/oncallpilot_api/db/: __init__.py  models.py  repositories.py  session.py
apps/api/oncallpilot_api/db/migrations/: alembic.ini  env.py
apps/api/oncallpilot_api/db/migrations/versions/: 001_initial_schema.py  002_fix_drift.py
apps/api/oncallpilot_api/observability/: tracer.py
apps/api/oncallpilot_api/services/: audit_service.py  chat_service.py  datasource_service.py  event_bus.py  investigation_service.py
apps/api/oncallpilot_api/tools/: __init__.py  base.py  connectivity.py  loki.py  prometheus.py  registry.py
apps/api/tests/integration/: conftest.py  test_alert_to_session_flow.py  test_audit_service.py  test_event_bus_redis.py  test_investigation_enqueue.py  test_migrations.py  test_sse_replay.py
apps/api/tests/unit/: test_alert_webhook.py  test_audit_service.py  test_chat_routes.py  test_config_loader.py  test_connectivity_tool.py  test_dependencies.py  test_event_bus.py  test_health.py  test_incident_routes.py  test_loki_tool.py  test_models_shape.py  test_prometheus.py  test_registry.py  test_repositories.py  test_tool_result.py  test_tracer.py
apps/worker/: Dockerfile  pyproject.toml
apps/worker/oncallpilot_worker/: jobs.py  main.py
apps/worker/tests/unit/: test_job_wiring.py
config/: oncallpilot.example.yaml
(+4 files in other folders)
