[project]
name = "oncallpilot-api"
version = "0.1.0"
description = "OnCallPilot API — cloud-native on-call investigation platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "pydantic>=2,<3",
    "pydantic-settings>=2,<3",
    "pyyaml>=6,<7",
    "structlog>=24,<25",
    "sqlalchemy[asyncio]>=2,<3",
    "asyncpg>=0.30,<1",
    "alembic>=1.14,<2",
    "pgvector>=0.3,<1",
    "httpx>=0.28,<1",
    "redis>=5,<6",
    "arq>=0.26,<1",
    "openai>=1,<2",
    "langgraph>=0.4,<1",
    "langchain-core>=0.3,<1",
    "langfuse>=2,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=6,<7",
    "httpx>=0.28,<1",
    "respx>=0.21,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["apps/api/tests"]

[tool.coverage.run]
source = ["oncallpilot_api"]

[tool.coverage.report]
fail_under = 85
